--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Portfolio</title>
 
@@ -11,7 +11,8 @@
 	<!-- JS -->
 	<script type="text/javascript" src="./js/jquery.min.js"></script>
 	<script type="text/javascript" src="./js/bootstrap.min.js"></script>
-	
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body data-spy="scroll" data-target="#myScrollspy" data-offset="80">
