--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
 
 	<nav class="navbar navbar-inverse navbar-fixed-top" id="myScrollspy">
 		<div class="container">
-		<ul class="nav navbar-nav navbar-right">
-	  		<li><a href="#about">About</a></li>
-	    	<li><a href="#portfolio">Portfolio</a></li>
-	    	<li><a href="#contact">Contact</a></li>
-		</ul>
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+				</button>
+			</div>
+
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+			  		<li><a href="#about">About</a></li>
+			    	<li><a href="#portfolio">Portfolio</a></li>
+			    	<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
 		</div>
 	</nav>
 
