Add markup for section about

--- a/index.html
+++ b/index.html
@@ -39,13 +39,21 @@
 	</nav>
 
 	<div class="container">
-
+		<!-- About -->
 		<section id="about">
 			<div class="row">
-				<div class="col-md-8">
-					<p>Front-End Developer and UX/UI designer, with practical experience in project management, branding strategy, and creative direction; devoted to functional programming and information architecture</p>
+				<div class="col-md-8 col-xs-12">
+					<p class="intro-text">Front-End Developer and UX/UI designer, with practical experience in project management, branding strategy, and creative direction; devoted to functional programming and information architecture.</p>
+
+					<hr />
+
+					<p class="about__title">Web Developer - User Experience Designer - Graphic Artist</p>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-xs-12">
+					<img class="img-responsive" src="./img/tet1.jpg" />
+				</div>
+			</div>
+		</section>
 
 				</div>
 			</div>
