Add markup for portfolio

--- a/index.html
+++ b/index.html
@@ -55,8 +55,22 @@
 			</div>
 		</section>
 
+		<!-- Portfolio -->
+		<section id="portfolio">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Portfolio</h2>
+					<hr />
+					
 				</div>
 			</div>
+
+			<ul class="list-group row">
+				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
+			</ul>
 		</section>
 
 		<section id="portfolio"></section>
