Add content for section contact

--- a/index.html
+++ b/index.html
@@ -73,10 +73,43 @@
 			</ul>
 		</section>
 
-		<section id="portfolio"></section>
+		<!-- Contact -->
+		<section id="contact">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Contact Me</h2>
+					<hr />
+				</div>
+			</div>
 
-		<section id="contact"></section>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="contact__form text-left">
+						<form action="#">
+							<div class="form-group">
+								<input type="text" class="form-control" name="name" placeholder="Name" />
+							</div>
+							<div class="form-group">
+								<input type="email" class="form-control" name="email" placeholder="Email Address" />
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" name="phone" placeholder="Phone number" />
+							</div>
+							<div class="form-group">
+								<textarea class="form-control" rows="5" name="message" placeholder="Message"></textarea>
+							</div>
+							<input class="btn btn-default" type="submit" value="Send">
+						</form>
+					</div>
+				</div>
 
+				<div class="col-md-6">
+					<p class="contact__text">Want to get in touch with me? Be it to request more info about myself or my experience, to ask for my resume, tips on how to solve your sudoku, random questions about the universe and the meaning of life, or even if only for some nice Fika here in stunning Toronto... just feel free to drop me a line anytime.</p>
+
+					<p class="contact__text">I promise to reply A.S.A.P.</p>
+				</div>
+			</div>
+		</section>
 	</div>
 
 	<footer>
