--- a/index.html
+++ b/index.html
@@ -113,9 +113,36 @@
 	</div>
 
 	<footer>
-		<div class="footer__above"></div>
-		<div class="footer__below"></div>
-	</footer>
+		<div class="footer-above text-center">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<h3>About this page</h3>
+						<p>
+							Made with <i class="fa fa-coffee"></i> and <i class="fa fa-music"></i> <br />
+							by <a>Jerome</a>.
+						</p>
+					</div>
 
+					<div class="col-md-6">
+						<h3>Around the web</h3>
+
+						<ul class="accounts text-center">
+							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-github" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+			
+		<div class="footer-below text-center">
+			<p class="copyright">
+				Jerome &copy 2017. All Rights Reversed
+			</p>
+		</div>
+	</footer>
 </body>
 </html>
