Remove the javascript declaration on head
Add class to menu items

--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 
-	<!-- JS -->
-	<script type="text/javascript" src="./js/jquery.min.js"></script>
-	<script type="text/javascript" src="./js/bootstrap.min.js"></script>
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body data-spy="scroll" data-target="#myScrollspy" data-offset="80">
-
-	<nav class="navbar navbar-inverse navbar-fixed-top" id="myScrollspy">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" data-offset="80">
+	<nav class="navbar navbar-fixed-top" id="myScrollspy">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -30,9 +25,9 @@
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-			  		<li><a href="#about">About</a></li>
-			    	<li><a href="#portfolio">Portfolio</a></li>
-			    	<li><a href="#contact">Contact</a></li>
+			  		<li><a class="page-scroll" href="#about">About</a></li>
+			    	<li><a class="page-scroll" href="#portfolio">Portfolio</a></li>
+			    	<li><a class="page-scroll" href="#contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
