Change the introtext and title

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 		<section id="about">
 			<div class="row">
 				<div class="col-md-8 col-xs-12">
-					<p class="intro-text">Front-End Developer and UX/UI designer, with practical experience in project management, branding strategy, and creative direction; devoted to functional programming and information architecture.</p>
-
+					<p class="intro-text">Hello, my name is <span class="name">Jerome Fabricante</span> a web developer and UI/UX enthusiast with practical experience in creating web applications using PHP frameworks; familiar with Object Oriented Programming.</p>
+				
 					<hr />
 
-					<p class="about__title">Web Developer - User Experience Designer - Graphic Artist</p>
+					<p class="about__title">Web Developer - UI/UX Designer</p>
 				</div>
 				<div class="col-md-4 col-xs-12">
 					<img class="img-responsive" src="./img/tet1.jpg" />
