Add dummy image portfolio content
Add icon on button
Add links on social buttons

--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 			</div>
 
 			<ul class="list-group row">
-				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
-				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
-				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
-				<li class="list-group-item col-md-6 col-xs-12"><img src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-4 col-xs-12"><img class="img-responsive" src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-4 col-xs-12"><img class="img-responsive" src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-4 col-xs-12"><img class="img-responsive" src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-4 col-xs-12"><img class="img-responsive" src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-4 col-xs-12"><img class="img-responsive" src="./img/tet1.jpg" /></li>
+				<li class="list-group-item col-md-4 col-xs-12"><img class="img-responsive" src="./img/tet1.jpg" /></li>
 			</ul>
 		</section>
 
@@ -93,7 +95,7 @@
 							<div class="form-group">
 								<textarea class="form-control" rows="5" name="message" placeholder="Message"></textarea>
 							</div>
-							<input class="btn btn-default" type="submit" value="Send">
+							<button class="btn btn-default" type="submit">Send <i class="fa fa-fw fa-paper-plane" aria-hidden="true"></i></button>
 						</form>
 					</div>
 				</div>
@@ -123,10 +125,10 @@
 						<h3>Around the web</h3>
 
 						<ul class="accounts text-center">
-							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-github" aria-hidden="true"></i></a></li>
+							<li><a target="_blank" href="https://www.linkedin.com/in/jerome-fabricante-a55a9a137/" class="btn-social"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a target="_blank" href="https://github.com/fabricantejerome" class="btn-social"><i class="fa fa-fw fa-github" aria-hidden="true"></i></a></li>
 							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a target="_blank" href="https://web.facebook.com/jerome.fabricante" class="btn-social"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
