Change footer text

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			
 		<div class="footer-below text-center">
 			<p class="copyright">
-				Jerome &copy 2017. All Rights Reversed
+				&copy 2017. All Rights Reserved
 			</p>
 		</div>
 	</footer>
