--- a/index.html
+++ b/index.html
@@ -141,5 +141,13 @@
 			</p>
 		</div>
 	</footer>
+
+	<!-- JS -->
+	<script src="./js/jquery.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+
+	<!-- Scrolling Nav JavaScript -->
+	<script src="js/jquery.easing.min.js"></script>
+	<script src="js/scrolling-nav.js"></script>
 </body>
 </html>
