Add contact number and email

--- a/index.html
+++ b/index.html
@@ -142,15 +142,20 @@
 							<div class="form-group">
 								<textarea class="form-control" rows="5" name="message" placeholder="Message"></textarea>
 							</div>
-							<button class="btn btn-default" type="submit">Send <i class="fa fa-fw fa-paper-plane" aria-hidden="true"></i></button>
+							<button class="btn btn-default" type="button">Send <i class="fa fa-fw fa-paper-plane" aria-hidden="true"></i></button>
 						</form>
 					</div>
 				</div>
 
 				<div class="col-md-6">
-					<p class="contact__text">Want to get in touch with me? Be it to request more info about myself or my experience, to ask for my resume, tips on how to solve your sudoku, random questions about the universe and the meaning of life, or even if only for some nice Fika here in stunning Toronto... just feel free to drop me a line anytime.</p>
+					<p class="contact__text">Want to get in touch with me? Be it to request more info about myself or my experience, ask for my resume. Just feel free to drop me a line anytime.</p>
 
 					<p class="contact__text">I promise to reply A.S.A.P.</p>
+
+					<div class="contact__info">
+						<p><i class="fa fa-phone"></i> +639272612690</p>
+						<p><i class="fa fa-envelope"></i> fabricantejerome@gmail.com</p>
+					</div>
 				</div>
 			</div>
 		</section>
