--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						<ul class="accounts text-center">
 							<li><a target="_blank" href="https://www.linkedin.com/in/jerome-fabricante-a55a9a137/" class="btn-social"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a></li>
 							<li><a target="_blank" href="https://github.com/fabricantejerome" class="btn-social"><i class="fa fa-fw fa-github" aria-hidden="true"></i></a></li>
-							<li><a href="#" class="btn-social"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a target="_blank" href="https://www.instagram.com/jfabricante/" class="btn-social"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i></a></li>
 							<li><a target="_blank" href="https://web.facebook.com/jerome.fabricante" class="btn-social"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
@@ -189,7 +189,7 @@
 			
 		<div class="footer-below text-center">
 			<p class="copyright">
-				&copy 2017. All Rights Reserved
+				&copy 2018. All Rights Reserved
 			</p>
 		</div>
 	</footer>
