Change social media links

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
 				</button>
 			</div>
 
@@ -177,9 +177,9 @@
 						<h3>Around the web</h3>
 
 						<ul class="accounts text-center">
-							<li><a target="_blank" href="https://www.linkedin.com/in/jerome-fabricante-a55a9a137/" class="btn-social"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a target="_blank" href="https://www.linkedin.com/in/jerome-fabricante-%F0%9F%9A%A2-a55a9a137/" class="btn-social"><i class="fa fa-fw fa-linkedin" aria-hidden="true"></i></a></li>
 							<li><a target="_blank" href="https://github.com/fabricantejerome" class="btn-social"><i class="fa fa-fw fa-github" aria-hidden="true"></i></a></li>
-							<li><a target="_blank" href="https://www.instagram.com/__jeromeeee__/" class="btn-social"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a target="_blank" href="https://www.instagram.com/jeromejfabricante/" class="btn-social"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i></a></li>
 							<li><a target="_blank" href="https://web.facebook.com/jerome.fabricante" class="btn-social"><i class="fa fa-fw fa-facebook" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
